syntax = "proto3";

package api.voiceagent;

option go_package = "store/api/voiceagent;voiceagent";

import "usercenter/user.proto";
import "voiceagent/agent.proto";
import "voiceagent/topic.proto";

// Conversation (对话会话): 用户与 Agent 交互的运行时实例。
// [参考文档]: Design and Configure -> Conversation flow (/docs/agents-platform/customization/conversation-flow)
message Conversation {
  // _id: 会话唯一标识。
  string _id = 1 [json_name = "_id"];

  // user: 所属用户。
  api.usercenter.User user = 2;

  // agent: 该会话锁定的角色。
  Agent agent = 3;

  int64 createdAt = 5;

  // lastMessageAt: 最后一次交互时间。
  // [用法]: 用于列表排序及清理僵尸会话。
  int64 lastMessageAt = 6;

  // status: 状态 (active: 通话中, ended: 通话结束)。
  // [用法]: 管理 WebSocket 连接的生命周期。
  string status = 7;

  // signedUrl: 预生成的带签名的 WebSocket 连接地址 (有效期短)。
  string signedUrl = 9;

  // token:
  //  For private agents, you must pass in a conversationToken obtained from the ElevenLabs API. Generating this token requires an ElevenLabs API key.
  // The conversationToken is valid for 10 minutes.
  string token = 10;

  int64 endedAt = 11;

  string roomName = 12;
  string subject = 13;
  string summary = 14;
  Topic topic = 15;

  message Extra {
    // analysisStatus: 分析状态 (pending: 待分析, completed: 已分析, failed: 分析失败)
    // [用法]: 配合 Cron Job 进行会话总结和记忆提取。
    string analysisStatus = 1;
  }

  Extra extra = 20;

}
